中等题：17.回溯算法 用的回溯，也就是递归，这类题目不是很熟悉，还需要多加练习

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,10 @@
         "ranges": "cpp",
         "span": "cpp",
         "stacktrace": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "list": "cpp"
     },
     "git.ignoreLimitWarning": true
 }
