困难题：239，利用优先队列（即大根堆）

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,12 @@
         "regex": "cpp",
         "deque": "cpp",
         "string": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "*.tcc": "cpp",
+        "unordered_set": "cpp",
+        "expected": "cpp",
+        "optional": "cpp",
+        "variant": "cpp"
     },
     "git.ignoreLimitWarning": true
 }
