--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,10 +1,12 @@
 {
     "tasks": [
         {
-            "type": "cppbuild",
+            "type": "shell",
             "label": "C/C++: gcc.exe 生成活动文件",
             "command": "D:\\CodeNeed\\x86_64-14.2.0-release-win32-seh-ucrt-rt_v12-rev0\\mingw64\\bin\\g++.exe",
             "args": [
+                "--std",
+                "c++17",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
